Update ReportController.java
(cherry picked from commit b8486953df90900ad14810c3c536c10b23e49fab)